fix: added nowrap to price

--- a/app/(my-app)/services/components/ServiceSection/ServiceSection.module.css
+++ b/app/(my-app)/services/components/ServiceSection/ServiceSection.module.css
@@ -94,7 +94,7 @@
 .service_section__itemRight {
   display: flex;
   gap: 2px;
-  /*text-wrap: nowrap;*/
+  text-wrap: nowrap;
   margin: 0;
   font-size: 1rem;
 }
